<resources>
    <string name="app_name">康佳音乐</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="there_is_no_song_yet">没有歌曲</string>
    <string name="sdcard_cannot_use">SD卡暂时不可用</string>
    <string name="loading_hardly">正在努力加载</string>
    <string name="unknown_artist">未知艺术家</string>
    <string name="there_is_no_lyric_yet">暂无歌词</string>
    <string name="spread_good_music">传播好音乐</string>
    <string name="imagecontentDescription">imagecontentDescription</string>
    <string name="mp_unknown_artist">Unknow Artist</string>
    <string name="mp_unknown_album">Unknow Album</string>
    <string name="pop_menu_favorite">收藏</string>
    <string name="mp_cant_find_lyrics">the lrc can\'t be found</string>
    <string name="mp_lyrics_tips">***&#160;&#160;&#160;the lrc come from internet，just be reference&#160;&#160;&#160;***</string>
    <string name="max_text_color">max</string>
    <string name="mid_text_color">mid</string>
    <string name="min_text_color">min</string>
    <string name="playmode_repeat_all_play">全部播放</string>
    <string name="local_music_count">共 %1$d首歌曲</string>
    <string name="remove">移除</string>
    <string name="delete">删除</string>
    <string name="check_detail">查看信息</string>
    <string name="add_to_playlist">添加到播放列表</string>
    <string name="song_infomation">歌曲信息</string>
    <string name="song_name">歌曲名称</string>
    <string name="artist">艺术家</string>
    <string name="file_format">文件格式</string>
    <string name="file_size">文件大小</string>
    <string name="file_path">文件路径</string>
    <string name="song_duration">播放时长</string>
    <string name="close">关闭</string>
    <string name="playqueue">播放队列</string>
    <string name="clear">清空</string>
    <string name="play">Play</string>
    <string name="search">Search</string>
    <string name="search_user">用户</string>
    <string name="search_songs">歌曲搜索</string>
    <string name="search_recommand">歌单</string>
    <string name="search_album">专辑</string>
    <string name="search_mv">MV</string>
    <string name="singer_search_edit_hint">请输入歌手名</string>
    <string name="search_song">歌曲</string>
    <string name="new_list_header">网络音乐播放列表的header</string>
    <string name="search_result_count">共匹配到 %1$d个结果</string>
    <string name="navigation_local_music">本地音乐</string>
    <string name="navigation_search_hint">今天想听什么音乐?</string>
    <string name="navigation_local_music_play_random_no_song_tips">您还没有本地音乐</string>
    <string name="navigation_my_fav">我喜欢</string>
    <string name="navigation_my_playlist">我的歌单</string>
    <string name="navigation_local_playlist">本地收藏</string>
    <string name="navigation_cloud_playlist">我的歌单</string>
    <string name="navigation_download_management">下载管理</string>
    <string name="navigation_history">最近播放</string>
    <string name="navigation_hundred_million_club">装机必备</string>
    <string name="navigation_finder">乐库</string>
    <string name="navigation_nearby">榜单</string>
    <string name="navigation_more">设置</string>
    <string name="navigation_apps">装机必备</string>
    <string name="navigation_games">定时</string>
    <string name="navigation_appsandgames">精品应用</string>
    <string name="navigation_recommend_game_title">康佳音乐游戏</string>
    <string name="navigation_recommend_game">热门游戏</string>
    <string name="navigation_exp_feedback">欢迎使用%s抢先版,愿您提供宝贵意见 ></string>
    <string name="navigation_singer">歌手</string>
    <string name="navigation_classfication">分类</string>
    <string name="navigation_channel">电台</string>
    <string name="navigation_mv">热门</string>
    <string name="singer_heat">人气歌手</string>
    <string name="skin_title_backgroud">skin_title_backgroud</string>
    <string name="click_continue_to_download">点击继续下载</string>
    <string name="click_to_redownload">下载失败,点击重新下载</string>
    <string name="waiting_wifi">等待wifi网络</string>
    <string name="download_the_wait">下载等待中...</string>
    <string name="search_edit_toast">请输入歌曲名 </string>
    <string name="classify_count">共有 %1$d个分类</string>
    <string name="numofsongs">%1$s首</string>
    <string name="commond_retry_connect">尝试重新连接</string>
    <string name="main_localmusic_count">%1$s首</string>
    <string name="crop_save_text">保存</string>
    <string name="crop_discard_text">舍弃</string>
    <string name="crop_rotate_left">左旋转</string>
    <string name="crop_rotate_right">右旋转</string>
    <string name="runningFaceDetection">请稍候...</string>
    <string name="wallpaper">正在设置壁纸，请稍候...</string>
    <string name="savingImage">正在保存照片...</string>
    <string name="multiface_crop_help">轻点一张脸开始裁剪。</string>
    <string name="details_ok">确定</string>
    <string name="vip_360handler_channel">15,14</string>
    <string name="app_recommend_channel">3,9,11,18,38,46,56,62</string>
    <string name="no_game_recommend_channel">3,38</string>
    <string name="not_shortcut_channel">131</string>
    <string name="p2p_page_channel">0,1</string>
    <string name="app_360club_show_channel">15,197,332,377,6,183,202,58</string>
    <string name="appstore_title">360手机助手</string>
    <string name="appstore_notification_title_found_new_version">%1$s有新版本了</string>
    <string name="appstore_notification_message_found_new_version_speed">V%1$s，大小：%2$s</string>
    <string name="appstore_notification_message_found_new_version_patch">V%1$s，可省流量%2$s</string>
    <string name="appstore_notification_title_apk_download_ok">更新下载成功</string>
    <string name="appstore_notification_message_apk_download_ok">%s下载成功</string>
    <string name="appstore_notification_title_apk_download_fail">更新下载失败</string>
    <string name="appstore_notification_message_apk_download_fail">%s下载失败</string>
    <string name="appstore_notification_tickertext_apk_downloading">正在下载更新</string>
    <string name="appstore_notification_title_apk_downloading">更新中...</string>
    <string name="appstore_notification_message_apk_downloading">正在下载%s</string>
    <string name="appstore_update_speed">高速更新</string>
    <string name="appstore_update_patch">省流量更新</string>
    <string name="appstore_update">直接更新</string>
    <string name="appstore_dialog_title_found_new_version">发现新版本 %1$s</string>
    <string name="appstore_dialog_message_update">"更新内容:
%1$s

更新包大小:%2$s
使用360手机助手省流量更新仅需要%3$s
建议更新"</string>
    <string name="appstore_dialog_message_update_patch">"更新内容:
%1$s

更新包大小:%2$s
使用360手机助手更新，享受极速下载体验"</string>
    <string name="hello">Hello World, Kugou!</string>
    <string name="app_description">海量网络曲库, 随身畅听音乐</string>
    <string name="quick_play_laoding_tips">正在加载</string>
    <string name="tip_sdcard_removed">SD卡被移除</string>
    <string name="tip_addtoplaylist_success">添加成功</string>
    <string name="tip_removefromplaylist_success">移除成功</string>
    <string name="tip_removefromplaylist_failure">移除失败</string>
    <string name="loading">正在努力为您加载...</string>
    <string name="save">保存</string>
    <string name="empty_string" />
    <string name="empty">当前列表还没有歌曲</string>
    <string name="empty_tips">当前歌单还没有歌曲</string>
    <string name="create_playlist_create_text_prompt">播放列表名称</string>
    <string name="create_playlist_rename_text_prompt">将\"%1$s\"重命名为</string>
    <string name="create_playlist_overwrite_text">覆盖</string>
    <string name="new_playlist_name_template">我的歌单 %d</string>
    <string name="new_cloud_playlist_name_template">我的歌单 %d</string>
    <string name="search_edit_hint">歌名/歌手/简拼</string>
    <string name="more">正在努力为您加载...</string>
    <string name="no_data">没有数据</string>
    <string name="search_no_data">抱歉, 暂时没有找到相关内容</string>
    <string name="no_more_data">没有更多的数据</string>
    <string name="exit_tips">真的要退出吗？</string>
    <string name="running_bg">隐藏</string>
    <string name="exit_app">退出</string>
    <string name="update_wait_info">请稍候, 正在检查升级...</string>
    <string name="update_tips">更新提示</string>
    <string name="update_now">立即更新</string>
    <string name="force_update">立即升级</string>
    <string name="update_later">以后再说</string>
    <string name="select_audio_first">请先选择要添加的歌曲</string>
    <string name="select_audio_to_remove">请先选择要删除的歌曲</string>
    <string name="select_audio_to_play">请先选择要播放的歌曲</string>
    <string name="select_audio_to_down">请先选择要下载的歌曲</string>
    <string name="select_audio_to_send">请先选择要发送的歌曲</string>
    <string name="select_mv_to_remove">请先选择要删除的MV缓存</string>
    <string name="rename">重命名</string>
    <string name="rename_failure">重命名失败, 列表名不能为空！</string>
    <string name="check_update">检查更新</string>
    <string name="buffering">歌曲正在缓冲...</string>
    <string name="progressing">处理中请稍候...</string>
    <string name="net_error">网络繁忙,请稍候重试.</string>
    <string name="info_play_failure_external_storage_unmount">检测不到SD卡, 请检查SD卡是否正确插入</string>
    <string name="info_play_failure_unsupported">抱歉, 暂不支持播放此格式文件</string>
    <string name="info_play_failure_local_file_no_exist">本地歌曲文件不存在</string>
    <string name="info_play_failure_file_header_null">歌曲文件格式不正确</string>
    <string name="info_play_failure_cache_file_noexist">试听缓存文件不存在</string>
    <string name="info_play_failure_noexist">歌曲文件不存在</string>
    <string name="info_play_failure_nohash">抱歉, 找不到该歌曲</string>
    <string name="info_play_failure_mediaplayer_unknow_error">未知的播放出错</string>
    <string name="info_play_failure_mediaplayer_error">播放出错</string>
    <string name="info_play_failure_open_failed">打开歌曲文件失败</string>
    <string name="info_play_failure_net_music_open_failed">播放网络歌曲失败</string>
    <string name="info_play_failure_net_music_download_timeout">试听歌曲下载超时</string>
    <string name="info_play_failure_net_music_no_exit">抱歉, 找不到该网络歌曲</string>
    <string name="info_play_failure_net_music_net_invalid">当前网络可能需要登录认证, 无法获取歌曲</string>
    <string name="net_error_info">"噢！网络好像不通哦！
请检查您的网络, 或者前往本地歌曲瞧瞧！"</string>
    <string name="history_no_song">没有找到该歌曲</string>
    <string name="default_time">0:00</string>
    <string name="no_enough_space">SD卡未插入或SD卡空间不足</string>
    <string name="no_network">未找到可用的网络连接</string>
    <string name="show_2g_3g_tips">已经切换到2g/3g网络, 请注意您的流量哦</string>
    <string name="show_tips_on_loading_mode">正在加载中, 请稍候再操作哦</string>
    <string name="tips_no_song_to_play">播放队列没有歌曲, 请添加歌曲后再操作</string>
    <string name="show_wifi_tips">已经切换到WIFI网络</string>
    <string name="add_favourite">已加入“我喜欢”列表</string>
    <string name="delete_favourite">已从“我喜欢”列表移除</string>
    <string name="audio_no_hashvalue">无法找到相应的网络资源, 暂时不能分享哦</string>
    <string name="no_update">您已经安装了最新版的康佳音乐音乐!</string>
    <string name="can_not_sned_by_blue_tooth">这首歌是网络歌曲, 不能通过蓝牙传送</string>
    <string name="artist_name">歌手名:</string>
    <string name="track_name">歌曲名:</string>
    <string name="recommend">推荐</string>
    <string name="channel">电台</string>
    <string name="repeat_list_dialog_title">已经有相同的列表名了哦！</string>
    <string name="repeat_list_dialog_pos">换一个名字</string>
    <string name="select_playlist">请选择播放列表</string>
    <string name="exit_tip">再见, 康佳音乐音乐</string>
    <string name="scan_title">请选择扫描目录</string>
    <string name="scan_filter_flders">指定不扫描的文件夹</string>
    <string name="scan_folder_song_number">已发现%d首</string>
    <string name="scan_folder_unknown_song_number">未知歌曲数量</string>
    <string name="scaning_local_music">扫描本地歌曲中...</string>
    <string name="scaning_local_music_cancel_tips">正在扫描本地歌曲, 请稍候再重新扫描</string>
    <string name="scan_over">扫描结束</string>
    <string name="loading_channel_music">正在加载歌曲, 请稍候...</string>
    <string name="hint_feedback_content">请输入反馈信息</string>
    <string name="hint_feedback_contact">请输入您的QQ/手机</string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_success">提交成功,感谢您的反馈!</string>
    <string name="player_lyric_menu_lyric_search">搜索歌词</string>
    <string name="player_lyric_menu_font_color">歌词颜色</string>
    <string name="player_lyric_menu_font_size">字体大小</string>
    <string name="player_lyric_menu_lyric_backward">-0.5秒</string>
    <string name="player_lyric_menu_lyric_forward">+0.5秒</string>
</resources>