<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/container_local_music"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ListView
                android:id="@+id/net_listview_music"
                style="@style/Kugou.Widget.ListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="#00000000"
                android:fastScrollEnabled="false" />

            <include
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                layout="@layout/common_play_list_header_bar"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/empty_no_sdcard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sdcard_cannot_use"
            android:visibility="gone" />

        <TextView
            android:id="@+id/empty_no_song"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/there_is_no_song_yet"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/empty_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/loading_hardly"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/refresh_layout"
        layout="@layout/refresh_layout"
        android:visibility="gone" />

</FrameLayout>