<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/container_local_music"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible" >

            <include layout="@layout/common_play_list_header_bar" />
        </LinearLayout>

        <ListView
            android:id="@+id/listview_local_music"
            style="@style/Kugou.Widget.ListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:fastScrollEnabled="false" >

            <!-- android:layoutAnimation="@anim/list_anim_layout" -->
        </ListView>

        <TextView
            android:id="@+id/empty_no_sdcard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sdcard_cannot_use"
            android:visibility="gone" />

        <TextView
            android:id="@+id/empty_no_song"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/there_is_no_song_yet"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/empty_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/loading_hardly"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/nodata_textView"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="没有数据" />
    </LinearLayout>

</RelativeLayout>