<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation_local_layout_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/navigation_netentry_height"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/navigation_netmusic_finder"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/bg_viewgroup_button"
                android:clickable="true"
                android:gravity="center"
                android:tag="bg_navigation_btn_default" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:drawableLeft="@drawable/ic_navigation_discovery"
                    android:drawablePadding="5.0dip"
                    android:duplicateParentState="true"
                    android:gravity="center"
                    android:minEms="4"
                    android:text="@string/navigation_finder"
                    android:textColor="@color/navigation_primary_text"
                    android:textSize="@dimen/textLargeSize" />
            </RelativeLayout>

            <View
                android:layout_width="1.0px"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="2.0dip"
                android:layout_marginTop="5.0dip"
                android:background="#33000000" />

            <RelativeLayout
                android:id="@+id/navigation_netmusic_singer"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/bg_viewgroup_button"
                android:clickable="true"
                android:gravity="center"
                android:tag="bg_navigation_btn_default" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:drawableLeft="@drawable/ic_navigation_singer"
                    android:drawablePadding="5.0dip"
                    android:duplicateParentState="true"
                    android:gravity="center"
                    android:minEms="4"
                    android:text="@string/navigation_singer"
                    android:textColor="@color/navigation_primary_text"
                    android:textSize="@dimen/textLargeSize" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginBottom="2.0dip"
            android:layout_marginTop="2.0dip"
            android:background="#33000000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/navigation_netentry_height"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/navigation_hotMusic"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/bg_viewgroup_button"
                android:clickable="true"
                android:gravity="center"
                android:tag="bg_navigation_btn_default" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:drawableLeft="@drawable/ic_navigation_mv"
                    android:drawablePadding="5.0dip"
                    android:duplicateParentState="true"
                    android:gravity="center"
                    android:minEms="4"
                    android:text="@string/navigation_mv"
                    android:textColor="@color/navigation_primary_text"
                    android:textSize="@dimen/textLargeSize" />
            </RelativeLayout>

            <View
                android:layout_width="1.0px"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5.0dip"
                android:layout_marginLeft="2.0dip"
                android:layout_marginRight="2.0dip"
                android:background="#33000000" />

            <RelativeLayout
                android:id="@+id/navigation_topList"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/bg_viewgroup_button"
                android:clickable="true"
                android:gravity="center"
                android:tag="bg_navigation_btn_default" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:drawableLeft="@drawable/ic_navigation_nearby"
                    android:drawablePadding="5.0dip"
                    android:duplicateParentState="true"
                    android:gravity="center"
                    android:minEms="4"
                    android:text="@string/navigation_nearby"
                    android:textColor="@color/navigation_primary_text"
                    android:textSize="@dimen/textLargeSize" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/navigation_local_layout_bg"
            android:minHeight="@dimen/navigation_netentry_height"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/navigation_setting"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_viewgroup_button"
                android:clickable="true"
                android:gravity="center" >

                <TextView
                    android:id="@+id/text_navigation_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@drawable/ic_navigation_more"
                    android:drawablePadding="5.0dip"
                    android:duplicateParentState="true"
                    android:gravity="center"
                    android:minEms="4"
                    android:text="@string/navigation_more"
                    android:textColor="@color/navigation_primary_text"
                    android:textSize="@dimen/textLargeSize" />

                <ImageView
                    android:id="@+id/image_navigation_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/text_navigation_more"
                    android:src="@drawable/icon_new"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navigation_timing11"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/navigation_local_layout_bg"
            android:minHeight="@dimen/navigation_netentry_height"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/navigation_timing"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_viewgroup_button"
                android:clickable="true"
                android:gravity="center" >

                <TextView
                    android:id="@+id/text_navigation_games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@drawable/ic_navigation_games"
                    android:drawablePadding="5.0dip"
                    android:duplicateParentState="true"
                    android:gravity="center"
                    android:minEms="4"
                    android:text="@string/navigation_games"
                    android:textColor="@color/navigation_primary_text"
                    android:textSize="@dimen/textLargeSize" />

                <ImageView
                    android:id="@+id/image_navigation_games_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/text_navigation_games"
                    android:layout_toRightOf="@id/text_navigation_games"
                    android:src="@drawable/icon_new_point"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

 

</LinearLayout>